--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -1,19 +1,80 @@
 <mvc:View
     displayBlock="true"
     xmlns:mvc="sap.ui.core.mvc"
+    xmlns:core="sap.ui.core"
+	xmlns:l="sap.ui.layout"
+	xmlns:f="sap.ui.layout.form"
     xmlns="sap.m"
     controllerName="myapp.controller.App">
-    <Carousel>
+    <App><!--It needs for mobile devices (add meta for mobile into the head of the index.html) and for routing between pages-->
         <pages>
-            <Image src="http://keenthemes.com/preview/metronic/theme/assets/global/plugins/jcrop/demos/demo_files/image1.jpg" height="400px" />
-            <Image src="http://keenthemes.com/preview/metronic/theme/assets/global/plugins/jcrop/demos/demo_files/image1.jpg" height="400px" />
-            <Image src="http://keenthemes.com/preview/metronic/theme/assets/global/plugins/jcrop/demos/demo_files/image1.jpg" height="400px" />
+            <Page title="openSAP - Developing with SAPUI5">
+                <content>
+                    <IconTabBar id="idTopLevelIconTabBar" class="sapUiResponsiveContentPadding">
+                        <items>
+                            <IconTabFilter id="start" text="{i18n>gettingStartedFilter}" icon="sap-icon://picture">
+                                <Carousel>
+                                    <pages>
+                                        <Image src="http://keenthemes.com/preview/metronic/theme/assets/global/plugins/jcrop/demos/demo_files/image1.jpg" height="400px" />
+                                        <Image src="http://keenthemes.com/preview/metronic/theme/assets/global/plugins/jcrop/demos/demo_files/image1.jpg" height="400px" />
+                                        <Image src="http://keenthemes.com/preview/metronic/theme/assets/global/plugins/jcrop/demos/demo_files/image1.jpg" height="400px" />
+                                    </pages>
+                                </Carousel>
+                                <Button text="{i18n>showHelloButtonText}" press="onPressButton" />
+                                <Input
+                                    value="{helloPanel>/recipient/name}"
+                                    description="Hello {helloPanel>/recipient/name}"
+                                    valueLiveUpdate="true"
+                                    width="60%" />
+                            </IconTabFilter>
+                            <IconTabFilter id="layouts" text="{i18n>layoutFilter}" icon="sap-icon://form">
+                                <MessageStrip
+                    				text="Success with default icon and close button:"
+                    				type="Success"
+                    				showIcon="true"
+                    				showCloseButton="true"
+                    				class="sapUiMediumMarginBottom">
+                    			</MessageStrip>
+                                <f:SimpleForm id="simpleFormChange"
+									title="Address"
+									editable="true"
+									class="editableForm sapUiSmallMarginTopBottom">
+									<f:content>
+										<Label text="{i18n>layoutFormName}"/>
+										<Input value="{address>/Name}"/>
+										<Label text="{i18n>layoutFormStreet}"/>
+										<Input value="{address>/Street}"/>
+										<Label text="{i18n>layoutFormHouseNumber}"/>
+										<Input value="{address>/HouseNumber}"/>
+										<Label text="{i18n>layoutFormZIPCode}"/>
+										<Input value="{address>/ZIPCode}"/>
+										<Label text="{i18n>layoutFormCity}"/>
+										<Input value="{address>/City}" />
+										<Label text="{i18n>layoutFormCountry}"/>
+										<Select>
+											<items>
+												<core:Item text="{i18n>layoutCountryGermany}"/>
+												<core:Item text="{i18n>layoutCountryUSA}"/>
+												<core:Item text="{i18n>layoutCountryEngland}"/>
+											</items>
+										</Select>
+									</f:content>
+								</f:SimpleForm>
+                                <Toolbar>
+									<ToolbarSpacer />
+									<Button
+										text="{i18n>layoutPublishButton}"
+                                        icon="sap-icon://outbox"
+										type="Accept" />
+									<Button
+										text="{i18n>layoutDraftButton}"
+                                        icon="sap-icon://save" />
+								</Toolbar>
+                            </IconTabFilter>
+                        </items>
+                    </IconTabBar>
+                </content>
+            </Page>
         </pages>
-    </Carousel>
-    <Button text="{i18n>showHelloButtonText}" press="onPressButton" />
-    <Input
-        value="{helloPanel>/recipient/name}"
-        description="Hello {helloPanel>/recipient/name}"
-        valueLiveUpdate="true"
-        width="60%" />
+    </App>
 </mvc:View>
